BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Sample_Authorization_Form_BMS_SHARED__c.object
<CustomObject>
    <description>VPRO 3.21.2013: Custom object to store details from completed sample authorization forms.  CLM Media content writes directly to this object.</description>
    <fields>
        <fullName>Authorization_Form_Signature_BMS_SHARED__c</fullName>
        <label>Authorization Form Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorizing_Pres_Exp_Date_BMS_SHARED__c</fullName>
        <label>Authorizing Prescriber: License Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorizing_Pres_License_BMS_SHARED__c</fullName>
        <label>Authorizing Prescriber: License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorizing_Prescriber_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorizing Prescriber</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Authorization Forms</relationshipLabel>
        <relationshipName>Sample_Authorization_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorizing_Prescriber_BPID_BMS_SHARED__c</fullName>
        <label>Authorizing Prescriber: BP ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorizing_Prescriber_State_BMS_SHARED__c</fullName>
        <label>Authorizing Prescriber: License State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form_Expiration_Date_BMS_SHARED__c</fullName>
        <label>Form Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mid_Level_BP_ID_BMS_SHARED__c</fullName>
        <label>Mid-Level: BP ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mid_Level_License_Expiration_BMS_SHARED__c</fullName>
        <label>Mid-Level: License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mid_Level_License_Number_BMS_SHARED__c</fullName>
        <label>Mid-Level: License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mid_Level_License_State_BMS_SHARED__c</fullName>
        <label>Mid-Level: License State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mid_Level_Prescriber_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mid-Level Prescriber</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Authorization Forms (Mid-Level Prescriber)</relationshipLabel>
        <relationshipName>Sample_Authorization_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rep_Territory_BMS_SHARED__c</fullName>
        <label>Rep Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Status_BMS_SHARED__c</fullName>
        <label>Sample Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date_BMS_SHARED__c</fullName>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <label>Sample Authorization Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAF-{00000}</displayFormat>
        <label>Sample Authorization Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Authorization Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>